examples/test/testpolicy14977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14977
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key5: value6
      key34: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value48
      podSelector:
        matchLabels:
          key34: value20
          key19: value31
          key33: value0
